--- a/less/main.less
+++ b/less/main.less
@@ -16,6 +16,7 @@ body {
   font-weight: @fontWeight;
   text-shadow: @textShadow;
   color: @lightFontColor;
+  transition: color 0.5s ease;
  
   > div,
   #apps > div {
