--- a/less/options.less
+++ b/less/options.less
@@ -1,21 +1,61 @@
 #options {
   width: 350px;
-  height: 0;
   position: absolute;
   left: calc(~"50% - 175px");
-  top: 0;
+  top: -110%;
   background: -webkit-gradient(linear, left top, left bottom, from(rgb(255,255,255)), to(rgb(230,230,230)));
   box-shadow: 0px 3px 6px @shadowColor;
   border-radius: 0 0 @borderRadius @borderRadius;
   transform: translateY(-110%);
   transition: transform .5s ease-out;
   z-index: 9999;
+  text-align: left;
+  padding: 1rem 2rem;
 
   -webkit-animation: hideOnStart 0 linear 1s infinite alternate;
   @-webkit-keyframes hideOnStart { 
-    from { height: 0; } 
-    to { height: 150; } 
+    from { top: -110%; } 
+    to { top: 0; } 
   }
 
   &.show { transform: translateY(0%); }
+
+  label {
+    cursor: pointer;
+    font-size: 1.75rem;
+    position: relative;
+    padding-left: 2rem;
+    color: @darkFontColor;
+
+    &:after,
+    &:before {
+      position: absolute;
+      left: 0;
+      top: 0.25rem;
+    }
+
+    &:after {
+      content: '';
+      width: 24px;
+      height: 24px;
+      background: -webkit-linear-gradient(top, #222 0%, #45484d 100%);
+      border-radius: @borderRadius;
+      box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,.4);
+      display: inline-block;
+      z-index: 10;
+    }
+    &:before { 
+      opacity: 0;
+      color: @lightFontColor;
+      z-index: 20;
+      font-size: 1.25rem;
+      transition: opacity 0.5s ease;
+      top: 0.4rem;
+      left: 0.15rem;
+    }
+  }
+  input { 
+    display: none;
+    &:checked + label:before { opacity: 1; }
+  }
 }
