Adding Tiles, Font "Lato" (Google Webfonts - has to be really integrated in the future) and some modification to font weight and color

--- a/less/apps.less
+++ b/less/apps.less
@@ -6,7 +6,7 @@
   box-shadow: inset -3.2rem 4.5rem 0.8rem -4rem @shadowColor;
   padding-bottom: 0.7rem;
   margin: 20px 0 0 0;
-  bottom: -12px;
+  bottom: -11px;
 
   .bx-wrapper {
     .bx-viewport {
@@ -59,7 +59,7 @@
       margin-top: 0.25rem;
       margin-bottom: 0;
       font: @font;
-      font-weight: @fontWeight * 2;
+      font-weight: @fontWeightNormal;
       font-size: 1rem;
     }
   }
