--- a/less/clock.less
+++ b/less/clock.less
@@ -11,7 +11,7 @@
     bottom: 2rem;
     width: 100%;
     font-size: 2rem;
-    font-weight: @fontWeight;
+    font-weight: @fontWeightLight;
   }
 
   .flip-clock-wrapper {
@@ -30,7 +30,7 @@
 
     ul {
       font: @font;
-      font-weight: @fontWeight;
+      font-weight: @fontWeightLight;
       width: 7rem;
       height: 9rem;
       font-size: 10rem;
