--- a/less/variables.less
+++ b/less/variables.less
@@ -1,11 +1,19 @@
+@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400);
+
 //@standardBackground: "../images/grey_wash_wall.png";
-@standardBackground: "../images/navy_blue.png";
+//@standardBackground: "../images/navy_blue.png";
+@standardBackground: "../images/dark-linen.png";
+//@standardBackground: "../images/light-linen.png";
+//@standardBackground: "../images/blueprint.png";
 @shadowColor: rgba(0, 0, 0, 0.4);
-@font: normal 11px "HelveticaNeueUltraLight", "Helvetica Neue UltraLight", "Helvetica Neue", Helvetica, sans-serif;
-@fontWeight: 100;
+//@font: normal 11px "HelveticaNeueUltraLight", "Helvetica Neue UltraLight", "Helvetica Neue", Helvetica, sans-serif;
+@font: normal 11px "Lato", sans-serif;
+@fontWeightLight: 100;
+@fontWeightNormal: 300;
+@fontWeightBold: 400;
 @borderRadius: 6px;
-@textShadow: 0 0 0.5rem #333;
+// @textShadow: 0 0 0.5rem #333;
+@textShadowLight: 0 0.1rem 0.2rem #333;
+@textShadowDark: 0 0 0.5rem #333;
 @lightFontColor: #ccc;
 @darkFontColor: #444;
-
-
