--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400);
 @charset "UTF-8";
 @font-face {
   font-family: "yantre";
@@ -20,12 +21,6 @@
   -webkit-font-smoothing: antialiased;
   transition: color 0.5s ease;
   color: #cccccc;
-}
-.dark [class^="icon-"]:before {
-  color: #444444;
-}
-.dark [class^="icon-"]:hover:before {
-  color: #848484;
 }
 .icon-thumbs-up:before {
   content: "\e000";
@@ -57,13 +52,13 @@ body {
   height: 100%;
   min-height: 600px;
   text-align: center;
-  background: url("../images/navy_blue.png");
+  background: url("../images/dark-linen.png");
   -webkit-font-smoothing: antialiased;
   transition: background 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   font-size: 62.5%;
-  font: normal 11px "HelveticaNeueUltraLight", "Helvetica Neue UltraLight", "Helvetica Neue", Helvetica, sans-serif;
-  font-weight: 100;
-  text-shadow: 0 0 0.5rem #333333;
+  font: normal 11px "Lato", sans-serif;
+  font-weight: 300;
+  text-shadow: 0 0.1rem 0.2rem #333333;
   color: #cccccc;
   transition: color 0.5s ease;
 }
@@ -77,8 +72,8 @@ body a {
   text-decoration: none;
   font-size: 1rem;
 }
-body.dark,
-body.dark a {
+body.dark #clock h1,
+body.dark #mails h1 {
   color: #444444;
 }
 #actions {
@@ -135,7 +130,7 @@ body.dark a {
   background-color: #cccccc;
 }
 #clock .flip-clock-wrapper ul {
-  font: normal 11px "HelveticaNeueUltraLight", "Helvetica Neue UltraLight", "Helvetica Neue", Helvetica, sans-serif;
+  font: normal 11px "Lato", sans-serif;
   font-weight: 100;
   width: 7rem;
   height: 9rem;
@@ -161,7 +156,7 @@ body.dark a {
   box-shadow: inset -3.2rem 4.5rem 0.8rem -4rem rgba(0, 0, 0, 0.4);
   padding-bottom: 0.7rem;
   margin: 20px 0 0 0;
-  bottom: -12px;
+  bottom: -11px;
 }
 #apps .bx-wrapper .bx-viewport {
   background: none;
@@ -216,8 +211,8 @@ body.dark a {
 #apps ul a h4 {
   margin-top: 0.25rem;
   margin-bottom: 0;
-  font: normal 11px "HelveticaNeueUltraLight", "Helvetica Neue UltraLight", "Helvetica Neue", Helvetica, sans-serif;
-  font-weight: 200;
+  font: normal 11px "Lato", sans-serif;
+  font-weight: 300;
   font-size: 1rem;
 }
 #apps.grayscale ul a img {
@@ -240,7 +235,7 @@ body.dark a {
   margin-left: 0.5rem;
   display: inline-block;
   position: absolute;
-  -webkit-animation: moveThumps 1.5s linear 1 alternate;
+  -webkit-animation: moveThumps 0.5s ease 1 alternate;
 }
 @-webkit-keyframes moveThumps {
   0% {
@@ -267,6 +262,7 @@ body.dark a {
   font-size: 3rem;
   margin: 0;
   font-weight: 100;
+  text-shadow: 0 0.1rem 0.2rem #333333;
 }
 #mails .unread h1 {
   font-size: 2.5rem;
@@ -294,11 +290,10 @@ body.dark a {
   text-align: left;
 }
 #mails .unread + ul > li a strong {
-  font-weight: 200;
+  font-weight: 400;
 }
 #mails .unread + ul > li a > strong {
   display: block;
-  font-weight: 400;
   width: 50%;
   font-size: 1.25rem;
   overflow: hidden;
@@ -318,11 +313,14 @@ body.dark a {
   margin: 0;
   text-align: right;
 }
+#mails .unread + ul > li a .info li:first-child strong {
+  font-weight: 300;
+}
 #mails .unread + ul > li a .info li:last-child strong {
-  font-weight: 100;
+  font-weight: 400;
 }
 #mails .unread + ul > li a p {
-  font-weight: 200;
+  font-weight: 300;
   font-size: 1.15rem;
   max-height: 3.5rem;
   overflow: auto;
