--- a/less/mail.less
+++ b/less/mail.less
@@ -10,7 +10,7 @@
       margin-left: 0.5rem; 
       display: inline-block;
       position: absolute;
-      -webkit-animation: moveThumps 1.5s linear 1 alternate;
+      -webkit-animation: moveThumps 0.5s ease 1 alternate;
       @-webkit-keyframes moveThumps { 
         0% { transform: scale(1); } 
         50% { transform: scale(2); }
@@ -31,7 +31,8 @@
     h1 {
       font-size: 3rem;
       margin: 0;
-      font-weight: @fontWeight;
+      font-weight: @fontWeightLight;
+      text-shadow: @textShadowLight;
     }
   }
 
@@ -59,10 +60,10 @@
         padding: 0.5rem;
         text-align: left;
 
-        strong { font-weight: @fontWeight * 2; }
+        strong { font-weight: @fontWeightBold; }
         > strong { 
           display: block; 
-          font-weight: 400;
+          // font-weight: 400;
           width: 50%;
           font-size: 1.25rem;
           overflow: hidden;
@@ -82,13 +83,14 @@
             margin: 0;
             text-align: right;
 
-            &:last-child strong { font-weight: @fontWeight; }
+            &:first-child strong { font-weight: @fontWeightNormal; }
+            &:last-child strong { font-weight: @fontWeightBold; }
           }
         }
 
         p {
           // box-shadow: inset 3.2rem 4.5rem 0.8rem -4rem @shadowColor;
-          font-weight: @fontWeight * 2;
+          font-weight: @fontWeightNormal;
           font-size: 1.15rem;
           max-height: 3.5rem;
           overflow: auto;
