--- a/less/variables.less
+++ b/less/variables.less
@@ -12,8 +12,6 @@
 @fontWeightNormal: 300;
 @fontWeightBold: 400;
 @borderRadius: 6px;
-// @textShadow: 0 0 0.5rem #333;
-@textShadowLight: 0 0.1rem 0.2rem #333;
-@textShadowDark: 0 0 0.5rem #333;
+@textShadow: 0 0.1rem 0.2rem #333;
 @lightFontColor: #ccc;
 @darkFontColor: #444;
