--- a/less/main.less
+++ b/less/main.less
@@ -14,9 +14,8 @@ body {
   font-size: 62.5%;
   font: @font;
   font-weight: @fontWeightNormal;
-  text-shadow: @textShadowLight;
+  text-shadow: @textShadow;
   color: @lightFontColor;
-  transition: color 0.5s ease;
  
   > div,
   #apps > div {
@@ -29,6 +28,8 @@ body {
     text-decoration: none;
     font-size: 1rem;
   }
+
+  h1 { transition: color 0.5s ease; }
   &.dark #clock h1,
   &.dark #mails h1 { color: @darkFontColor; }
 }
