--- a/less/variables.less
+++ b/less/variables.less
@@ -1,10 +1,15 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:100,300,400);
 
-//@standardBackground: "../images/grey_wash_wall.png";
-//@standardBackground: "../images/navy_blue.png";
-@standardBackground: "../images/dark-linen.png";
-//@standardBackground: "../images/light-linen.png";
+//@standardBackground: "../images/beach.jpg";
 //@standardBackground: "../images/blueprint.png";
+//@standardBackground: "../images/bookeh.jpg";
+//@standardBackground: "../images/dark-linen.png";
+//@standardBackground: "../images/filthy-tile.jpg";
+//@standardBackground: "../images/grey_wash_wall.png";
+//@standardBackground: "../images/light-linen.png";
+//@standardBackground: "../images/navy_blue.png";
+@standardBackground: "../images/red-blur.jpg";
+//@standardBackground: "../images/red-mesh.jpg";
 @shadowColor: rgba(0, 0, 0, 0.4);
 //@font: normal 11px "HelveticaNeueUltraLight", "Helvetica Neue UltraLight", "Helvetica Neue", Helvetica, sans-serif;
 @font: normal 11px "Lato", sans-serif;
