--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,24 @@
 .icon-default:before {
   content: "\e004";
 }
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 100;
+  src: local('Lato Light'), local('Lato-Hairline'), url("../font/lato/Lato-Hairline.ttf") format('tff');
+}
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Lato Book'), local('Lato-Light'), url("../../client/assets/embed/opensans400.woff") format('woff');
+}
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Lato Regular'), local('Lato-Regular'), url("../../client/assets/embed/opensans600.woff") format('woff');
+}
 body {
   margin: 0;
   padding: 0;
