--- a/less/font.less
+++ b/less/font.less
@@ -33,3 +33,23 @@
 .icon-check:before { content: "\e003"; }
 .icon-store:before { content: "\e005"; }
 .icon-default:before { content: "\e004"; }
+
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 100;
+  src: local('Lato Light'), local('Lato-Hairline'), url("../font/lato/Lato-Hairline.ttf") format('tff');
+}
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Lato Book'), local('Lato-Light'), url("../../client/assets/embed/opensans400.woff") format('woff');
+}
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Lato Regular'), local('Lato-Regular'), url("../../client/assets/embed/opensans600.woff") format('woff');
+}
