--- a/less/font.less
+++ b/less/font.less
@@ -3,7 +3,7 @@
   font-family: "yantre";
   src:url("@{path}.eot");
   src:url("@{path}.eot?#iefix") format("embedded-opentype"),
-    url("@{path}.ttf") format("truetype"),
+    url("@{path}.woff") format("truetype"),
     url("@{path}.svg#yantre") format("svg"),
     url("@{path}.woff") format("woff");
   font-weight: normal;
@@ -39,17 +39,17 @@
   font-family: 'Lato';
   font-style: normal;
   font-weight: 100;
-  src: local('Lato Light'), local('Lato-Hairline'), url("../font/lato/Lato-Hairline.ttf") format('tff');
+  src: local('Lato Hairline'), local('Lato-Hairline'), url("../fonts/lato/Lato-Hairline.woff") format('woff');
 }
 @font-face {
   font-family: 'Lato';
   font-style: normal;
   font-weight: 300;
-  src: local('Lato Book'), local('Lato-Light'), url("../../client/assets/embed/opensans400.woff") format('woff');
+  src: local('Lato Light'), local('Lato-Light'), url("../fonts/lato/Lato-Light.woff") format('woff');
 }
 @font-face {
   font-family: 'Lato';
   font-style: normal;
   font-weight: 400;
-  src: local('Lato Regular'), local('Lato-Regular'), url("../../client/assets/embed/opensans600.woff") format('woff');
+  src: local('Lato Regular'), local('Lato-Regular'), url("../fonts/lato/Lato-Regular.woff") format('woff');
 }
