--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400);
+// @import url(http://fonts.googleapis.com/css?family=Lato:100,300,400);
 
 //@standardBackground: "../images/beach.jpg";
 //@standardBackground: "../images/blueprint.png";
