--- a/less/variables.less
+++ b/less/variables.less
@@ -1,22 +1,27 @@
-// @import url(http://fonts.googleapis.com/css?family=Lato:100,300,400);
+//theme backgrounds
+@theme_path: '../images/';
+@theBeach: "@{theme_path}beach.jpg";
+@bluePrint: "@{theme_path}blueprint.png";
+@bookeh: "@{theme_path}bookeh.jpg";
+@linenDark: "@{theme_path}dark-linen.png";
+@linenLight: "@{theme_path}light-linen.png";
+@filthyTile: "@{theme_path}filthy-tile.jpg";
+@greyWash: "@{theme_path}grey_wash_wall.png";
+@navyBlue: "@{theme_path}navy_blue.png";
+@redWine: "@{theme_path}red-blur.jpg";
+@redMesh: "@{theme_path}red-mesh.jpg";
 
-//@standardBackground: "../images/beach.jpg";
-//@standardBackground: "../images/blueprint.png";
-//@standardBackground: "../images/bookeh.jpg";
-//@standardBackground: "../images/dark-linen.png";
-//@standardBackground: "../images/filthy-tile.jpg";
-//@standardBackground: "../images/grey_wash_wall.png";
-//@standardBackground: "../images/light-linen.png";
-//@standardBackground: "../images/navy_blue.png";
-@standardBackground: "../images/red-blur.jpg";
-//@standardBackground: "../images/red-mesh.jpg";
-@shadowColor: rgba(0, 0, 0, 0.4);
-//@font: normal 11px "HelveticaNeueUltraLight", "Helvetica Neue UltraLight", "Helvetica Neue", Helvetica, sans-serif;
 @font: normal 11px "Lato", sans-serif;
 @fontWeightLight: 100;
 @fontWeightNormal: 300;
 @fontWeightBold: 400;
+
+@lightFontColor: #ddd;
+@darkFontColor: #333;
+
+@textShadowLight: 0 0.1rem 0.2rem #111;
+@textShadowDark: 0 0 0.4rem #000;
+
+@standardBackground: @linenLight;
+@shadowColor: rgba(0, 0, 0, 0.4);
 @borderRadius: 6px;
-@textShadow: 0 0.1rem 0.2rem #333;
-@lightFontColor: #ccc;
-@darkFontColor: #444;
