--- a/less/theme.less
+++ b/less/theme.less
@@ -1,12 +1,12 @@
 body {
   &.dark {
-    #clock h1,
-    #mails h1 { color: @darkFontColor !important; }
+    h1,
+    h1 + p { color: @darkFontColor !important; }
   }
 
   &.light {
-    #clock h1,
-    #mails h1 { color: @lightFontColor !important; }
+    h1,
+    h1 + p { color: @lightFontColor !important; }
   }
 }
 
